--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios --simulator='iPhone 15 Pro' ",
+    "ios": "react-native run-ios --simulator='iPhone 15' ",
     "lint": "eslint .",
     "start": "react-native start --port=8082",
     "test": "jest"
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
     "@types/react-native": "^0.72.5",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-async-storage": "^0.0.1",
@@ -29,7 +30,6 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
