--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "ios": "react-native run-ios --simulator='iPhone 15' ",
     "lint": "eslint .",
     "start": "react-native start --port=8082",
-    "test": "jest"
+    "test": "jest",
+    "web:start": "react-scripts start",
+    "web:build": "react-scripts build"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
@@ -18,23 +20,29 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-async-storage": "^0.0.1",
-    "react-native-gifted-charts": "^1.3.13",
+    "react-native-gifted-charts": "^1.2.41",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^13.14.0",
+    "react-native-web": "^0.19.9",
     "react-native-webview": "^13.6.2",
     "react-query": "^3.39.3",
+    "react-scripts": "^5.0.1",
     "twrnc": "^3.6.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/cli": "^7.23.0",
+    "@babel/core": "^7.23.2",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-modules-commonjs": "^7.23.0",
     "@babel/preset-env": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "babel-cli": "^6.26.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
@@ -45,5 +53,17 @@
   },
   "engines": {
     "node": ">=16"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
