feat: crossword dragging

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-CRYPTO_API_KEY = ecaf5b3d-b1c8-4141-8778-289f93f28787
-STOCKS_API_KEY = C0NJN8SJDJ8FL1MZ
+CRYPTO_TOKEN = ecaf5b3d-b1c8-4141-8778-289f93f28787
+STOCKS_TOKEN = eVV2QnVyUGtyZ3p6cGpINTVyUHdjUjNrLUpxREZXVmI0VWpOMFktdDRMWT0
