--- a/package.json
+++ b/package.json
@@ -17,18 +17,22 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
     "@types/react-native": "^0.72.5",
+    "axios": "^1.6.1",
     "d3-shape": "^3.2.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-async-storage": "^0.0.1",
+    "react-native-axios": "^0.17.1",
     "react-native-dotenv": "^3.4.9",
+    "react-native-elements": "^3.4.3",
     "react-native-gifted-charts": "^1.3.13",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^6.2.1",
     "react-native-svg-charts": "^5.4.0",
+    "react-native-vector-icons": "^10.0.2",
     "react-native-web": "^0.19.9",
     "react-native-webview": "^13.6.2",
     "react-query": "^3.39.3",
