--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios --simulator='iPhone 15' ",
+    "ios": "react-native run-ios --simulator='iPhone 15 Pro'",
     "lint": "eslint .",
     "start": "react-native start --port=8082",
     "test": "jest",
     "web:start": "react-scripts start",
-    "web:build": "react-scripts build"
+    "web:build": "react-scripts build",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
@@ -19,7 +20,9 @@
     "@types/react-native": "^0.72.5",
     "axios": "^1.6.1",
     "d3-shape": "^3.2.0",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "moment": "^2.29.4",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-async-storage": "^0.0.1",
@@ -30,6 +33,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^6.2.1",
     "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^10.0.2",
