fix: locales + webview tab

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 QUIZ_CONTENT_URL = https://wikipedia.com
+CRYPTO_TOKEN=ecaf5b3d-b1c8-4141-8778-289f93f28787
 STOCKS_TOKEN = eVV2QnVyUGtyZ3p6cGpINTVyUHdjUjNrLUpxREZXVmI0VWpOMFktdDRMWT0
