--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "axios": "^1.6.1",
     "d3-shape": "^3.2.0",
     "deprecated-react-native-prop-types": "^5.0.0",
+    "i18next": "^23.7.6",
+    "lodash.memoize": "^4.1.2",
     "moment": "^2.29.4",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
+    "react-i18next": "^13.4.1",
     "react-native": "0.72.6",
     "react-native-async-storage": "^0.0.1",
     "react-native-axios": "^0.17.1",
