--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,8 @@ yarn-error.log
 # Ruby / CocoaPods
 /ios/Pods/
 /vendor/bundle/
+quantum.xcodeproj/xcuserdata/*
+quantum.xcodeproj/project.xcworkspace/xcuserdata/*
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
