--- a/.gitignore
+++ b/.gitignore
@@ -59,7 +59,29 @@ yarn-error.log
 /ios/Pods/
 /vendor/bundle/
 quantum.xcodeproj/xcuserdata/*
+quantumAppTests/
 quantum.xcodeproj/project.xcworkspace/xcuserdata/*
+
+
+# Xcode
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
+quantum.xcworkspace
+Podfile.lock
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
