fix: warning, webview condition, moment

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-QUIZ_CONTENT_URL = https://wikipedia.com
-CRYPTO_TOKEN=ecaf5b3d-b1c8-4141-8778-289f93f28787
+QUIZ_CONTENT_URL = https://www.npoint.io/
+CRYPTO_TOKEN = ecaf5b3d-b1c8-4141-8778-289f93f28787
 STOCKS_TOKEN = eVV2QnVyUGtyZ3p6cGpINTVyUHdjUjNrLUpxREZXVmI0VWpOMFktdDRMWT0
+QUANTUM_ADDONS_URL = https://api.npoint.io/6ad5ddcba50b2986ce27
