--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-async-storage": "^0.0.1",
     "react-native-axios": "^0.17.1",
     "react-native-dotenv": "^3.4.9",
+    "react-native-eject": "^0.2.0",
     "react-native-elements": "^3.4.3",
     "react-native-gifted-charts": "^1.3.13",
     "react-native-linear-gradient": "^2.8.3",
