--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^6.2.1",
     "react-native-svg-charts": "^5.4.0",
+    "react-native-tracking-transparency": "^0.1.2",
     "react-native-vector-icons": "^10.0.2",
     "react-native-web": "^0.19.9",
     "react-native-webview": "^13.6.2",
